kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bv-backend-dep
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/book-vault/backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: ghcr-secret
