kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bv-backend-svc
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
